[project]
name = "voxcpm-server"
version = "2.0.0"
description = "VoxCPM2 TTS server with CLI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "python-multipart>=0.0.32",
    "regex>=2026.7.19",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "uvicorn>=0.51.0",
    "wetext>=0.1.4",
]
